<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            app:cardCornerRadius="4dp">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    style="@style/SettingsBigTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_big_title_necessary" />

                <com.mct.autotask.presentation.view.common.SettingItem
                    android:id="@+id/si_premium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:st_icon="@drawable/ic_crown"
                    app:st_icon_tint="@android:color/transparent"
                    app:st_summary="@string/settings_title_premium_summary"
                    app:st_title="@string/settings_title_premium" />

                <com.mct.autotask.presentation.view.common.SettingItem
                    android:id="@+id/si_permission"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:st_icon="@drawable/ic_user_and_key"
                    app:st_summary="@string/settings_title_permission_summary"
                    app:st_title="@string/settings_title_permission" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            app:cardCornerRadius="4dp">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    style="@style/SettingsBigTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_big_title_display" />

                <com.mct.autotask.presentation.view.common.SettingItem
                    android:id="@+id/si_theme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:st_icon="@drawable/ic_brightness"
                    app:st_summary="@string/settings_title_theme_summary"
                    app:st_title="@string/settings_title_theme" />

                <com.mct.autotask.presentation.view.common.SettingItem
                    android:id="@+id/si_color"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:st_icon="@drawable/ic_color_palette"
                    app:st_summary="@string/settings_title_color_summary"
                    app:st_title="@string/settings_title_color" />

                <com.mct.autotask.presentation.view.common.SettingItem
                    android:id="@+id/si_language"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:st_icon="@drawable/ic_language"
                    app:st_summary="@string/settings_title_language_summary"
                    app:st_title="@string/settings_title_language" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.cardview.widget.CardView>

    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>
