<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        style="@style/AppBarLayoutStyle">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/AppToolbar.NavBack"
            app:title="@string/toolbar_settings_theme" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="4dp">

        <ScrollView
            android:id="@+id/scroll_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.mct.autotask.presentation.view.common.SettingItem
                    android:id="@+id/si_auto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:st_summary="@string/settings_theme_title_auto_summary"
                    app:st_title="@string/settings_theme_title_auto"
                    app:st_widget="RadioBox" />

                <com.mct.autotask.presentation.view.common.SettingItem
                    android:id="@+id/si_dark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:st_summary="@string/settings_theme_title_dark_summary"
                    app:st_title="@string/settings_theme_title_dark"
                    app:st_widget="RadioBox" />

                <com.mct.autotask.presentation.view.common.SettingItem
                    android:id="@+id/si_light"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:st_summary="@string/settings_theme_title_light_summary"
                    app:st_title="@string/settings_theme_title_light"
                    app:st_widget="RadioBox" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </ScrollView>

    </androidx.cardview.widget.CardView>


</androidx.appcompat.widget.LinearLayoutCompat>